# xunji-study

./: .env.android.example  .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.desktop.config.ts  vite.mobile.config.ts
.github/workflows/: deploy-server.yml
.openai/: hosting.json
android/: capacitor.settings.gradle  gradle.properties  variables.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/imagineluc/xunji/: MainActivity.java  UsageStatsPlugin.java
android/app/src/main/res/values/: strings.xml  styles.xml
app/: CalendarApp.module.css  CalendarApp.tsx  StudyApp.tsx  globals.css  layout.tsx  page.tsx  register-sw.tsx
app/api/sync/: route.ts
app/study/: page.tsx
db/: schema.ts
deploy/: deploy-xunji  xunji.nginx  xunji.service
drizzle/: 0000_foamy_black_tarantula.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
mobile/: index.html  main.tsx
public/: manifest.webmanifest  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: rendered-html.test.mjs  task-regression.test.mjs
